# MCP-URL2SNAP

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  server.py  smithery.yaml
